retirar o preço base bugado

--- a/expresso_patronum/templates/menu/personalizar.html
+++ b/expresso_patronum/templates/menu/personalizar.html
@@ -95,7 +95,7 @@
             <div id="resumo-bebida">
                 <h5 style="color: #3C2415;" id="resumo-nome">{{ bebida.nome }}</h5>
                 <p style="font-size: 0.9rem; color: #666;" id="resumo-descricao">{{ bebida.descricao }}</p>
-                <span style="font-size: 0.9rem; color: #666;">Base: R$ <span id="resumo-preco-base">{{ bebida.preco|floatformat:2 }}</span></span>
+                <span style="font-size: 0.9rem; color: #666;">
             </div>
 
             <div id="resumo-personalizacao">
